# jtunnel-cli

./: .env.example  .gitignore  README.md  install.ps1  install.sh  jtunnel.spec  pyi_entry.py  pyproject.toml  uninstall.ps1  uninstall.sh
jtunnel/: __init__.py  auth.py  cli.py  config.py  errors.py  http_proxy.py  protocol.py  slots.py  tunnel.py  ui.py  ws_relay.py
scripts/: build-linux.sh  build-windows.ps1
tests/: test_config.py  test_protocol.py  test_slots.py
