[project]
name = "jtunnel-cli"
version = "0.1.0"
description = "Local developer CLI for JT Tunnel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pyinstaller",
]

[project.scripts]
jtunnel = "jtunnel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jtunnel"]

[tool.ruff]
line-length = 100
target-version = "py311"
